# LIA_Graph

./: .coverage  .env.dev.local  .env.staging  .gitignore  .railwayignore  AGENT.md  AGENTS.md  CLAUDE.md  CODEX.md  Makefile  README.md  package.json  pyproject.toml  railpack.json
artifacts/: batch_1_quality_gate.json  batch_2_quality_gate.json  batch_3_quality_gate.json  batch_4_quality_gate.json  batch_5_quality_gate.json  batch_6_quality_gate.json  batch_7_quality_gate.json  batch_8_quality_gate.json  canonical_corpus_manifest.json  corpus_audit_report.json  corpus_inventory.json  corpus_reconnaissance_report.json  diag_thin_corpus_xref.json  excluded_files.json  flagged_for_curator_review.csv  graph_validation_report.json  interpretation_load_report.json  launch_batch_state_1.json  launch_batch_state_2.json  launch_batch_state_3.json  launch_batch_state_4.json  launch_batch_state_5.json  launch_batch_state_6.json  launch_batch_state_7.json  launch_batch_state_8.json  revision_candidates.json  subtopic_decisions.jsonl  subtopic_proposals_20260421T150424Z.json  subtopic_proposals_20260423T145816Z.json  subtopic_proposals_20260423T145829Z.json
config/: article_secondary_topics.json  canonical_question_shapes.json  citation_allow_list.json  comparative_regime_pairs.json  compatible_doc_topics.json  et_senado_section_map.json  llm_runtime.json  prefix_parent_topic_map.json  provider_trust_tiers.json  subtopic_taxonomy.json  topic_norm_allowlist.json  topic_taxonomy.json  year_constants.json
cron/: __init__.py  cascade_consumer.py  reverify_periodic.py  state_flip_notifier.py
docs/: DEPENDENCIES.md  README.md
evals/: 100qs_accountant.jsonl  100qs_rubric.yaml  README.md  __init__.py  accountant_qa_es.jsonl  alignment_baseline.json  baseline.json  chat_e2e_renta_suite.jsonl  embedding_abc_benchmark.jsonl  faithfulness_baseline.json  gold_retrieval_v1.jsonl  gold_taxonomy_v2_validation.jsonl  graph_edges_canary_v1.jsonl  long_cognition_bubble_first_turns_v1.jsonl  long_cognition_v1.jsonl  multiturn_dialogue_v1.jsonl  normative_analysis_rubric.yaml  normative_analysis_suite.jsonl  pipeline_c_golden.jsonl  pipeline_c_rubric.yaml  quality_quickcheck_v1.jsonl  rag2_first_turn_20.jsonl  rag_retrieval_benchmark.jsonl  renta_scenarios_es.jsonl  run_eval_stub.py  run_retrieval_eval.py
frontend/: admin.html  embed.html  form-guide.html  index.html  invite.html  login.html  normative-analysis.html  ops.html  orchestration.html  package-lock.json  package.json  (+5 more)
(+8879 files in other folders)
