[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lia-graph"
version = "0.1.0"
description = "Graph-first knowledge pipeline for Colombian accounting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LIA" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pyyaml>=6.0.3",
  "reportlab>=4.0",
  "supabase>=2.0",
  "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=7.0",
  "supabase>=2.0",
  "psycopg[binary]>=3.1",
]

[project.scripts]
lia-ui = "lia_graph.ui_server:main"
lia-graph-artifacts = "lia_graph.ingest:main"
lia-deps-check = "lia_graph.dependency_smoke:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# OOM WARNING: never run the full suite in one process — use `make test-batched`.
# A conftest guard will abort if >20 test files are collected without
# LIA_BATCHED_RUNNER=1.  See tests/conftest.py for details.
addopts = "--tb=short -q"
markers = [
    "integration: requires live infrastructure (e.g. local Falkor docker). Gated by LIA_INTEGRATION=1.",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
